@@ -6,16 +6,16 @@ import java.util.List;
 /**
  * Created by liuyumeng on 2018/1/31.
  * 以64K／100毫秒的速度往ava堆填数据，一共1000次，使用jconsole的内存页进行监控
- *
- * -Xms100m -Xmx100m -XX:+UseSerialGC
+ * <p>
+ * -Xms100m -Xmx100m  -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails
  */
 public class OomObjectDemo {
     static class OomObject {
-        private byte[] placeholder = new byte[64 * 1024];//todo 以长度分配空间的底层原理
+        private byte[] placeholder = new byte[1024 * 1024];//todo 以长度分配空间的底层原理
     }
 
     private static void fillHeap(int num) throws InterruptedException {
-        Thread.sleep(30000);
+        Thread.sleep(3000);
 
         List<OomObject> oomObjects = new ArrayList<>();
         for (int i = 0; i < num; i++) {
@@ -26,8 +26,26 @@ public class OomObjectDemo {
     }
 
     public static void main(String[] args) throws Exception {
-        fillHeap(10000);
+        new Thread(() -> {
+            try {
+                normal();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }).start();
+        new Thread(() -> {
+            try {
+                fillHeap(10000);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }).start();
         //System.gc(); 为什么gc没有立即生效？
-        System.out.println("------结束" );
+        System.out.println("------结束");
+    }
+
+    private static void normal() throws InterruptedException {
+        while (true) {
+        }
     }
 }
